Auto collapsing tabs: fix the "More" popup always having overflow [publish]

--- a/src/tabs/tabs.css
+++ b/src/tabs/tabs.css
@@ -117,6 +117,7 @@
 .hiddenBold {
   display: flex;
   visibility: hidden;
+  overflow: hidden;
 
   height: 0;
 
@@ -126,6 +127,7 @@
 .hiddenRegular {
   display: flex;
   visibility: hidden;
+  overflow: hidden;
 
   height: 0;
 
